+ Fix for wrapping headings

--- a/wp-content/themes/myhomesolar/style.css
+++ b/wp-content/themes/myhomesolar/style.css
@@ -39,6 +39,10 @@
 	font-size:38px;
 }
 
+h1 {
+    white-space: nowrap;
+}
+
 h3 {
 	margin-bottom:20px;
 }
